exports[`Toolbar #blockTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar">
  <Button
    active={false}
    icon={null}
    label="Test 1"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-2"
    label="Test 2"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-3"
    label="Test 3"
    onClick={[Function]} />
</div>
`;

exports[`Toolbar #enableHorizontalRule 1`] = `
<div
  className="editor__toolbar"
  role="toolbar">
  <Button
    active={false}
    icon={null}
    label="HR"
    onClick={[Function]} />
</div>
`;

exports[`Toolbar #enableLineBreak 1`] = `
<div
  className="editor__toolbar"
  role="toolbar">
  <Button
    active={false}
    icon={null}
    label="BR"
    onClick={[Function]} />
</div>
`;

exports[`Toolbar #entityTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar">
  <Button
    active={false}
    icon={null}
    label="Test 1"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-2"
    label="Test 2"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-3"
    label="Test 3"
    onClick={[Function]} />
</div>
`;

exports[`Toolbar #inlineStyles 1`] = `
<div
  className="editor__toolbar"
  role="toolbar">
  <Button
    active={false}
    icon={null}
    label="Test 1"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-2"
    label="Test 2"
    onClick={[Function]} />
  <Button
    active={false}
    icon="icon-test-3"
    label="Test 3"
    onClick={[Function]} />
</div>
`;

exports[`Toolbar empty 1`] = `
<div
  className="editor__toolbar"
  role="toolbar" />
`;
